feat(ui): add active flights page
